# JokesDB

./: LICENSE  README.md  pyproject.toml  setup.py
jokesdb/: __init__.py
