[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JokesDB"
version = "0.1.0"
description = "A simple Python module to fetch jokes from my website."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
  { name="Code2Craft", email="support@code2craft.xyz" }
]
urls = { 
    "Homepage" = "https://code2craft.xyz",
    "Source" = "https://github.com/gamercristi11/JokesDB"
}
dependencies = [
    "requests"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
